<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/space4x"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tagline"
        style="@style/text_style_label_large"
        android:layout_marginHorizontal="@dimen/space8x"/>

    <TextView
        android:id="@+id/text_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Winter Is Coming"
        style="@style/text_style_body_medium"
        android:layout_marginHorizontal="@dimen/space8x"
        android:layout_marginTop="@dimen/space4x"/>

    <TextView
        android:id="@+id/title_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_overview"
        style="@style/text_style_label_large"
        android:layout_marginTop="@dimen/space8x"
        android:layout_marginHorizontal="@dimen/space8x" />

    <kr.co.prnd.readmore.ReadMoreTextView
        android:id="@+id/text_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_style_body_medium"
        android:layout_marginHorizontal="@dimen/space8x"
        android:layout_marginTop="@dimen/space4x"
        app:readMoreColor="@color/primary"
        app:readMoreMaxLine="3"
        app:readMoreText="@string/read_more"
        tools:text="@string/text_holder" />
</androidx.appcompat.widget.LinearLayoutCompat>