<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.octopus.moviesapp.ui.movies.MoviesViewModel" />

        <variable
            name="listener"
            type="com.octopus.moviesapp.ui.movies.MoviesClicksListener" />

        <variable
            name="moviesCategory"
            type="com.octopus.moviesapp.domain.enums.MoviesCategory" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space4x"
            android:paddingHorizontal="@dimen/space8x"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.chip.ChipGroup
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true"
                tools:ignore="TouchTargetSizeCheck">

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="@{()->viewModel.onChipClick(moviesCategory.POPULAR)}"
                    android:text="@string/popular"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onChipClick(moviesCategory.NOW_PLAYING)}"
                    android:text="@string/now_playing"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onChipClick(moviesCategory.UPCOMING)}"
                    android:text="@string/upcoming"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.onChipClick(moviesCategory.TOP_RATED)}"
                    android:text="@string/top_rated"
                    app:chipStrokeColor="@android:color/transparent" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movies_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/space2x"
            android:paddingHorizontal="@dimen/space6x"
            app:showWhenStateIsSuccess="@{viewModel.moviesListState}"
            app:spanCount="2"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_movie" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:showWhenStateIsLoading="@{viewModel.moviesListState}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/background"
            app:showWhenStateIsError="@{viewModel.moviesListState}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/space8x"
            tools:ignore="UseCompoundDrawables">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_no_mobile_internet"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/no_mobile_internet" />

            <TextView
                style="@style/text_style_body_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/oops"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/font_primary_color" />

            <TextView
                style="@style/text_style_body_large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/there_is_no_internet_connection"
                android:textAlignment="center"
                android:textColor="@color/error" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space8x"
                android:onClick="@{()->viewModel.tryLoadMoviesAgain()}"
                android:textAllCaps="true"
                android:text="@string/retry"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>