<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.octopus.moviesapp.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space8x"
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/top_app_bar_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/primary"
                style="@style/text_style_headline_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:onClick="@{()-> viewModel.onClickSkip()}"
                android:textColor="@color/out_line"
                style="@style/text_style_body_medium"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            android:layout_marginBottom="@dimen/space12x">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/username"
                    android:textColor="@color/on_surface_variant"
                    android:drawableStart="@drawable/ic_person"
                    android:drawableTint="@color/primary"
                    android:paddingHorizontal="16dp"
                    android:drawablePadding="16dp"
                    android:autofillHints=""
                    android:text="@={viewModel.userName}"
                    android:inputType="textEmailAddress"
                    style="@style/text_style_body_large"
                    android:background="@drawable/filled_light_rounded_shape"/>
                <TextView
                    android:id="@+id/email_error_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space2x"
                    android:lines="1"
                    android:text="@{viewModel.userNameHelperText}"
                    android:ellipsize="end"
                    android:textColor="@color/error"
                    style="@style/text_style_label_small"
                    tools:text="Email can't be empty!"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/space6x">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/space8x"
                    android:background="@drawable/filled_light_rounded_shape">
                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:text="@={viewModel.password}"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/primary"
                        android:hint="@string/password"
                        android:textColor="@color/on_surface_variant"
                        android:inputType="textPassword"
                        app:showPasswordIfTrue="@{viewModel.isShowPassWordEnabled}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        style="@style/text_style_body_large"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space8x"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:onClick="@{() -> viewModel.onClickShowPassWord()}"
                        app:changePasswordIcon="@{viewModel.isShowPassWordEnabled}"
                        android:contentDescription="@string/toggle_password_visibility"
                        app:tint="@color/tertiary"
                        tools:src="@drawable/ic_eye" />
                </LinearLayout>
                <TextView
                    android:id="@+id/password_error_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@{viewModel.passwordHelperText}"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/space2x"
                    android:textColor="@color/error"
                    style="@style/text_style_label_small"
                    tools:text="First Name is empty!"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space6x"
                android:text="@string/forgot_password"
                style="@style/text_style_body_medium"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/login"
            android:textColor="@color/on_primary"
            android:textAllCaps="false"
            android:onClick="@{() -> viewModel.onClickLogin()}"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="@dimen/space18x"
            app:backgroundTint="@color/primary"
            style="@style/Widget.Material3.Button.TonalButton"
            app:layout_constraintBottom_toTopOf="@id/register_suggestion_linearlayout"/>

        <LinearLayout
            android:id="@+id/register_suggestion_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_style_body_medium"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/on_surface_variant"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:onClick="@{() -> viewModel.onClickSignUp()}"
                android:textColor="@color/blue"
                style="@style/text_style_label_large"
                android:layout_marginHorizontal="@dimen/space2x"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>